CRATEDB_DEPLOYMENT.yaml
kind: StatefulSet
apiVersion: "apps/v1"
metadata:
  name: crate
spec:
  serviceName: "crate-set"
  replicas: 1
  selector:
    matchLabels:
      app: crate
  template:
    metadata:
      labels:
        app: crate
    spec:
      containers:
      - name: crate
        image: crate:5.1.1
        command:
          - /docker-entrypoint.sh
          - -Cnode.name=crate
          - -Ccluster.name=cratedb-cluster
          - -Ccluster.initial_master_nodes=crate-0
          - -Cdiscovery.seed_providers=srv
          - -Cdiscovery.srv.query=_crate-internal._tcp.crate-internal-service.default.svc.cluster.local
          - -Cgateway.recover_after_data_nodes=2
          - -Cgateway.expected_data_nodes=3
          - -Cpath.data=/data
        volumeMounts:
            - mountPath: /data
              name: data
        resources:
          limits:
            memory: 512Mi
        ports:
        - containerPort: 4300
          name: crate-internal
        - containerPort: 4200
          name: crate-web
        - containerPort: 5432
          name: postgres
      volumes:
        - name: data
          emptyDir:
            medium: "Memory"
