ORION_DEPLOYMENT.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orion
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orion
  template:
    metadata:
      labels:
        app: orion
    spec:
      containers:
      - name: orion
        image: fiware/orion:3.4.0
        args: ["-dbhost", "mongodb-0.mongodb-headless:27017,mongodb-1.mongodb-headless:27017,mongodb-2.mongodb-headless:27017", "-rplSet", "rs0", "-port", "1026", "-logLevel", "INFO"]
        ports:
        - containerPort: 1026
          name: orion
