QUANTUMLEAP_DEPLOYMENT.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantumleap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantumleap
  template:
    metadata:
      labels:
        app: quantumleap
    spec:
      containers:
      - name: quantumleap
        image: orchestracities/quantumleap
        ports:
        - name: quantumleap
          containerPort: 8668
          protocol: TCP
