ORION_SERVICE.yaml
apiVersion: v1
kind: Service
metadata:
  name: orion
  labels:
    app: orion
spec:
  type: ClusterIP
  selector:
    app: orion
  ports:
  - port: 1026
    targetPort: orion
    name: orion
