QUANTUMLEAP_SERVICE.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantumleap
  labels:
    app: quantumleap
spec:
  type: ClusterIP
  selector:
    app: quantumleap
  ports:
  - port: 8668
    targetPort: quantumleap
    protocol: TCP
    name: quantumleap
